--- a/first-react-app/src/index.css
+++ b/first-react-app/src/index.css
@@ -75,3 +75,11 @@ button:focus-visible {
   font-size: 2em;
   background-color: #f9f9f9;
 }
+
+.btn {
+  margin-top: 12px;
+  padding: 8px 16px;
+  font-size: 1em;
+  cursor: pointer;
+  background-color: rgb(232, 122, 180);
+}
