--- a/react-assignments/src/index.css
+++ b/react-assignments/src/index.css
@@ -1,68 +1,43 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: rgb(231, 244, 236);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+nav{
+  margin-bottom: 20px;
+    background-color: mediumaquamarine;
+    color: #7e17a7;
+    padding: 15px;
 }
-a:hover {
-  color: #535bf2;
-}
-
-body {
+ul{
+  list-style-type: none;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  overflow: hidden;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+li{
+  float: left;
+  margin-right: 20px;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+a{
+  text-decoration: none;
+  color: rgb(247, 9, 219);
+  font-weight: bold;
 }
-button:hover {
-  border-color: #646cff;
+a:hover{
+  color: rgba(236, 111, 2, 0.949);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+h1{
+  text-align: center;
+  color: #e65005;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+h3{
+  color: darkslateblue;
+  margin-left: 20px;
+}
+p{
+  font-size: 18px;
+  margin-left: 20px;
+  color: coral;
 }
