--- a/react-assignments/src/index.css
+++ b/react-assignments/src/index.css
@@ -41,3 +41,11 @@ p{
   margin-left: 20px;
   color: coral;
 }
+h2{
+  color: darkcyan;
+  margin-left: 20px;
+} 
+div{
+  margin: 10px;
+  padding: 10px;
+} 
